--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
 body{
     background-color: #22254b;
     font-family: "Poppins", sans-serif;
-    margin:0;
+    margin:0px;
+}
+main{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .movie{
@@ -14,24 +18,27 @@ body{
     border-radius: 3px;
     box-shadow: 0 4px 5px rgba(0,0,0,0.2);
     width:300px;
+    margin: 0.8rem;
 }
 
 .movie img{
-    height: 390px;
-    object-fit: cover;
     width: 100%;
+    /*height: 390px;
+    object-fit: cover;
+    
     display: inline-block;
-    padding: 0.5rem;
+    padding: 0.5rem;*/
 
 }
 
 .movie-info{
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding:0.5rem 1rem 1rem;
     color:whitesmoke;
-    letter-spacing: 1.2px;
-
+    letter-spacing: 0.5px;
+   
 }
 .movie-info h3 {
     margin:0;
@@ -40,6 +47,5 @@ body{
 .movie-info span {
     background-color:#22254b;
     padding:0.25rem;
-    border-radius: 4px;
-    
+    border-radius: 5px;   
 }
